// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should match snapshot 1`] = `
<scale-alert>
  <mock:shadow-root></mock:shadow-root>
  Notifications
</scale-alert>
`;

exports[`Alert should match snapshot when opened 1`] = `
<scale-alert opened="">
  <mock:shadow-root>
    <style>
      .alert {
  color: #333;
  width: 100%;
  display: flex;
  padding: 1rem;
  position: relative;
  background: #eee;
  box-sizing: border-box;
  text-align: left;
  justify-content: space-between;
}
.alert__body {
  display: flex;
}
.alert__headline {
  color: white;
  margin: 0;
  font-size: 1rem;
}
.alert__icon {
  width: 24px;
  height: 24px;
  margin: 0 0.5rem 0 0;
  display: flex;
  background: none;
  align-items: center;
  border-radius: 4px;
  justify-content: center;
}
.alert__close {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
}
.alert__close:hover {
  opacity: 1;
}
.alert--variant-primary {
  color: #fff;
  background: blue;
}
.alert--variant-secondary {
  color: #333;
  background: #eee;
}
.alert--variant-variant-warning {
  color: #fff;
  background: orange;
}
.alert--variant-danger {
  color: #fff;
  background: red;
}
.alert--variant-success {
  color: #fff;
  background: green;
}
.alert--variant-info {
  color: #fff;
  background: lightblue;
}
    </style>
    <div class="alert">
      <div class="alert__body">
        <div class="alert__icon"></div>
        <div>
          <div class="alert__headline"></div>
          <slot></slot>
        </div>
      </div>
      <a class="alert__close">
        x
      </a>
    </div>
  </mock:shadow-root>
  Notifications
</scale-alert>
`;

exports[`Alert should match snapshot with hasSlotClose 1`] = `
<scale-alert opened="">
  <mock:shadow-root>
    <style>
      .alert {
  color: #333;
  width: 100%;
  display: flex;
  padding: 1rem;
  position: relative;
  background: #eee;
  box-sizing: border-box;
  text-align: left;
  justify-content: space-between;
}
.alert__body {
  display: flex;
}
.alert__headline {
  color: white;
  margin: 0;
  font-size: 1rem;
}
.alert__icon {
  width: 24px;
  height: 24px;
  margin: 0 0.5rem 0 0;
  display: flex;
  background: none;
  align-items: center;
  border-radius: 4px;
  justify-content: center;
}
.alert__close {
  cursor: pointer;
  height: 16px;
  opacity: 0.5;
}
.alert__close:hover {
  opacity: 1;
}
.alert--variant-primary {
  color: #fff;
  background: blue;
}
.alert--variant-secondary {
  color: #333;
  background: #eee;
}
.alert--variant-variant-warning {
  color: #fff;
  background: orange;
}
.alert--variant-danger {
  color: #fff;
  background: red;
}
.alert--variant-success {
  color: #fff;
  background: green;
}
.alert--variant-info {
  color: #fff;
  background: lightblue;
}
    </style>
    <div class="alert">
      <div class="alert__body">
        <div class="alert__icon"></div>
        <div>
          <div class="alert__headline"></div>
          <slot></slot>
        </div>
      </div>
      <a class="alert__close">
        <div>
          <slot name="close"></slot>
        </div>
      </a>
    </div>
  </mock:shadow-root>
  Notifications
  <div slot="close">
    Close
  </div>
</scale-alert>
`;
